--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "@tabler/icons-react": "^2.47.0",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
+    "firebase": "^10.8.0",
+    "firebaseui": "^6.1.0",
     "i18next": "^23.8.2",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.0.5",
+    "react-router-dom": "^6.22.0",
     "recharts": "2"
   },
   "devDependencies": {
